# WebFrame

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  mainpage.dox
.github/tools/: index.html
.github/workflows/: auto-clang-format.yml  benchmark-and-deploy.yaml  benchmark.yml  ci.yaml  ci.yml  codeql-analysis.yaml  codeql.yml  documentation.yml  gh-pages.yaml
benchmark/: .gitignore  README.md  aggregate-results.py  index.html  requirements.txt  run-single-benchmark.ps1  run-single-benchmark.sh
benchmark/contestants/: server.cpp  server_atomic.cpp
doc/: cascade_context.md  prompt.txt  references.bib
doc/1.Text/: 00_abstract.tex  01_introduction.tex  02_existing_solutions.tex  03_theoretical_background.tex  04_architecture.tex  05_protocols.tex  06_type_safe_params.tex  07_example_app.tex  (+3 more)
docs/: annotated.html  classes.html  concepts.html  dir_00e51b36b06e78486c329736f0d380e4.html  dir_1a6196ca4f2192c92f5d13f4d84e661f.html  dir_1d467a7025c227a9c0931ab6c931aa72.html  dir_333b19ebe2780e72f383e74060f0420b.html  dir_35abf0ada3c15502f050e8fae02551ee.html  dir_3eb9178f1642dc88e6e7027832da72b6.html  dir_44cdc36bb2519bc8fd980fe0feeb1508.html  dir_4657c86f75aa39def1fcbb81a366cfa6.html  dir_5406f08ea407f75c884a1dd410e34369.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_b39b5091e8d1d2be4b7fc59d57749634.html  dir_c4a24f28b780680412a5fdb1ea7be943.html  dir_c72b25b75abe208498b36a3e44a3726c.html  dir_d3ca34a06bfeec6794069160fac1a6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_daec3a57c7a985a78b24271adc6b7c3a.html  dir_e5f329dfb94803cb49fdb2dc4328d22e.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_j.html  functions_func_k.html  functions_func_l.html  (+66 more)
examples/: CMakeLists.txt
examples/Project/: CMakeLists.txt  README.md
examples/Project/docs/: ARCHITECTURE.md
examples/Project/src/: main.cpp
examples/Project/src/app/: config.cpp  config.hpp  server.cpp  server.hpp
examples/Project/src/handlers/: pages.cpp  pages.hpp
examples/Project/src/handlers/api/: tasks.cpp  tasks.hpp  users.cpp  users.hpp
examples/Project/src/handlers/websocket/: task_hub.cpp  task_hub.hpp
examples/Project/src/middleware/: auth.cpp  auth.hpp  request_logger.cpp  request_logger.hpp
examples/Project/src/models/: task.cpp  task.hpp  user.cpp  user.hpp
examples/Project/src/services/: task_service.cpp  task_service.hpp  user_service.cpp  user_service.hpp
examples/Project/static/css/: style.css
examples/Project/static/js/: app.js
examples/Project/templates/layouts/: base.html
examples/Project/templates/pages/: index.html  login.html
examples/Samples/: CMakeLists.txt
examples/Samples/benchmark_server/: CMakeLists.txt  main.cpp
examples/Samples/echo_server/: CMakeLists.txt  main.cpp
examples/Samples/hello_world/: CMakeLists.txt  main.cpp
examples/Samples/http2_server/: CMakeLists.txt  main.cpp
examples/Samples/http2_server/certs/: cert.pem  key.pem
examples/Samples/https_server/: CMakeLists.txt  main.cpp
examples/Samples/https_server/certs/: generate_localhost_cert.ps1
examples/Samples/range_server/: CMakeLists.txt  main.cpp
examples/Samples/raw_benchmark/: CMakeLists.txt  main.cpp
examples/Samples/static_server/: CMakeLists.txt  main.cpp
examples/Samples/static_server/www/: app.js  data.json  index.html  style.css
examples/Samples/streaming_server/: CMakeLists.txt  main.cpp
examples/Samples/template_server/: CMakeLists.txt  main.cpp
examples/Samples/template_server/templates/: greeting.html  listing.html
examples/Samples/websocket_server/: CMakeLists.txt  main.cpp
include/: webframe-version.hpp.in
lib/: CMakeLists.txt
lib/core/: core.hpp  interface.hpp
lib/core/SyncOutput/: init.hpp
lib/core/c/: host.h
lib/core/http/: predef.hpp
lib/core/http/predef/: codes.hpp  constexpr.hpp  mime.hpp
lib/core/http/processing/: loading_state.hpp  path_variables.cpp  path_variables.hpp  request.cpp  request.hpp
lib/core/http/request/: method.cpp  method.hpp
lib/core/http/response/: response.cpp  response.hpp  status_line.cpp  status_line.hpp
lib/core/http_basics/: init.hpp  path_variables.hpp  request.hpp  response.hpp  status_line.hpp
lib/core/http_consts/: codes.hpp  mime.hpp
lib/core/internal/application/: application.cpp  application.hpp
lib/core/internal/exceptions/: socket_not_created.hpp  unable_to_bind_to_socket.hpp  unable_to_retrieve_address.hpp
lib/core/internal/router/: router.cpp  router.hpp
lib/core/internal/threads/: threads.hpp
lib/core/util/: respond_manager.hpp  server_status.hpp
lib/core/utils/: generator.hpp  lambda2function.hpp  regex_matcher_wrapper.hpp  respond_manager.hpp  server_status.hpp  sync_file.hpp
lib/dep/url-matcher/: CMakeLists.txt  RegexMatcherConfig.h.in
lib/dep/url-matcher/.github/workflows/: auto-clang-format.yml
lib/dep/url-matcher/core/: CMakeLists.txt
lib/dep/url-matcher/core/include/matcher/: core.hpp
lib/dep/url-matcher/core/include/matcher/impl/: core.cpp  node.cpp  subtree.cpp
lib/dep/url-matcher/tests/: CMakeLists.txt
lib/dep/url-matcher/tests/src/: demo.cpp  main.cpp
lib/include/: core.hpp
lib/include/http/response/: response.hpp
lib/include/internal/application/: application.hpp
libs/: CMakeLists.txt
src/: webframe.cpp
tests/: CMakeLists.txt  http2_tests.cpp  main.cpp  test_auth_state.cpp  test_chunked.cpp  test_compression.cpp  test_connection_pool.cpp  test_error.cpp  test_expected.cpp  test_from_string.cpp  test_object_pool.cpp  test_range.cpp  test_response.cpp  test_router.cpp  test_static_files.cpp  test_view.cpp
tests/IT/: response_of.hpp
tests/benchmark/: server_atomic.cpp  server_volatile.cpp
tests/integration_tests/: main.cpp  response_of.hpp
(+951 files in other folders)
